k8s/05-loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: agendamentos
spec:
  type: ClusterIP
  selector:
    app: loki
  ports:
    - name: http
      port: 3100
      targetPort: 3100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: agendamentos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      nodeSelector:
        camada: dados
      securityContext:
        runAsUser: 0
      containers:
        - name: loki
          image: grafana/loki:3.0.0
          args:
            - -config.file=/etc/loki/loki-config.yaml
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki/loki-config.yaml
              subPath: loki-config.yaml
            - name: loki-data
              mountPath: /loki
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-data
