k8s/06-fastapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi
  namespace: agendamentos
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: agendamentos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      nodeSelector:
        camada: aplicacao
      containers:
        - name: fastapi
          image: agenda-fastapi:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
