k8s/07-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: agendamentos
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: agendamentos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      nodeSelector:
        camada: aplicacao
      containers:
        - name: nginx
          image: agenda-nginx:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
            - containerPort: 443
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config
