k8s/09-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: agendamentos
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30300
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: agendamentos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      nodeSelector:
        camada: aplicacao
      containers:
        - name: grafana
          image: grafana/grafana:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: grafana-datasources
              mountPath: /etc/grafana/provisioning/datasources/loki.yaml
              subPath: loki.yaml
      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
